# speedkey

./: .gitignore  AUTHORS  COPYING  COPYING.LESSER  ChangeLog  Makefile  Makefile.am  README  autogen.sh  configure.ac  sha1.c
sha1/: Makefile.am  sha1.h
src/: Makefile.am  sha1.c  speedkey.c
